[package]
name = "async-scoped"
version = "0.3.1"
authors = ["Rajsekar Manokaran <rajsekar@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/async-scoped"
description = "Spawn scoped (non 'static) asynchronous futures using async_std runtime"
homepage = "https://github.com/rmanoka/async-scoped"
repository = "https://github.com/rmanoka/async-scoped"
readme = "README.md"

categories = [ "asynchronous", "concurrency" ]
keywords = [ "async", "async-std", "scoped", "spawn" ]
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.1"
futures = "0.3.1"

[dependencies.async-std]
features = ["attributes"]

version = "1.4.0"
# path = "../async-std"

[dev-dependencies]
femme = "1.3.0"
log = { version = "0.4.8", features = ["kv_unstable"] }
