[package]
name = "async-scoped"
version = "0.5.0"
authors = ["Rajsekar Manokaran <rajsekar@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/async-scoped"
description = "Spawn scoped (non 'static) asynchronous futures for async_std and tokio runtimes"
homepage = "https://github.com/rmanoka/async-scoped"
repository = "https://github.com/rmanoka/async-scoped"
readme = "README.md"

categories = [ "asynchronous", "concurrency" ]
keywords = [ "async", "async-std", "tokio", "scoped", "spawn" ]
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "0.4.6"
slab = "0.4.2"
async-std = { version = "1.6.3", optional = true }
futures = "0.3.1"
tokio = {version = "0.3.3", features = ["rt-multi-thread", "macros", "sync"], optional = true}

[features]

use-async-std = ["async-std"]
use-tokio = ["tokio"]


[dev-dependencies]
femme = "1.3.0"
log = { version = "0.4.8", features = ["kv_unstable"] }
async-std = { version = "1.6.3", features = ["attributes"] }
